# utc-broadcaster

./: .gitignore  CMakeLists.txt  README.md  build_and_test.sh
doc/: TASK.md  issues.md  todo.md
src/broadcaster/: CMakeLists.txt  broadcaster.h  main.cpp
src/reciever/: CMakeLists.txt  main.cpp  reciever.h
src/utils/: CMakeLists.txt  factories.cpp  factories.h  packets.h  sock_addr.cpp  sock_addr.h  system_clock.h  udp.cpp  udp.h
tests/: CMakeLists.txt  broadcast-test.cpp  reciever-test.cpp  utils-test.cpp
